# goose

./: .mcp.json
.claude/skills/social-post/: SKILL.md
social-media-agent/: .env.example  README.md  pyproject.toml  requirements.txt
social-media-agent/src/social_media_server/: __init__.py  config.py  server.py
