[project]
name = "social-media-agent"
version = "0.1.0"
description = "MCP server that cross-posts to X, Bluesky, Mastodon, LinkedIn, Threads (and a TikTok stub)."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
]

[project.scripts]
social-media-agent = "social_media_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/social_media_server"]
